Added capistrato for deployment

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -49,3 +49,14 @@ picture {
   
   align:center;
 }
+
+h2 {
+   font-size: 25px;
+    font-weight: normal;
+    padding: 4px 0;
+    }
+
+.fb-like {
+    width: 90px;
+    height: 40px;
+}
