--- a/app/views/overlay/index.html.erb
+++ b/app/views/overlay/index.html.erb
@@ -1,5 +1,5 @@
 <div class="well"><center>
-  <h1>Let's change profile pictures to show our support</h1>
+  <h2>Let's change profile pictures to express our support, Just like the one below!</h2>
   <p>
     <%= image_tag 'default.jpg', alt: 'Create Facebook Profile Image', width: 300, class: 'img-responsive' %>
   </p>
