--- a/app/views/users/privacy.html.erb
+++ b/app/views/users/privacy.html.erb
@@ -1,4 +1,4 @@
-<h3>NP Profile Image Overlay - Privacy Policy</h3>
+<h3>Privacy Policy</h3>
 
 <p>This privacy policy has been compiled to better serve those who are concerned with how their
 ‘Personally identifiable information’ (PII) is being used online.
