Just some dirty css

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -18,7 +18,7 @@ h1 {
     text-align: right;
     padding: 6px 10px;
     p {
-      font-size: 14px;
+      font-size: 16px;
       font-weight: normal;
       padding: 4px 0;
     }
@@ -57,6 +57,16 @@ h2 {
     }
 
 .fb-like {
-    width: 90px;
-    height: 40px;
+    padding: 8px 140px;
+    font-size: 16px;}
+pub
+{
+  align:center;
+
 }
+
+
+.btn-login {
+    padding: 8px 140px;
+    font-size: 16px;
+    }
