--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-md-8 col-sm-8 col-xs-8">
-    <h1>
+    <h1 style="font-family:verdana;">
       #SaveTheInternet
     </h1>
   </div>
