--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -59,14 +59,15 @@ h2 {
 .fb-like {
     padding: 8px 140px;
     font-size: 16px;}
-pub
-{
-  align:center;
-
-}
-
 
 .btn-login {
     padding: 8px 140px;
     font-size: 16px;
+    }
+
+.btn-publish
+{
+    padding: 8px 140px;
+    font-size: 16px;
+    margin:0px auto; 
     }
