Index heading change

--- a/app/views/overlay/index.html.erb
+++ b/app/views/overlay/index.html.erb
@@ -1,7 +1,7 @@
 <div style="font-family:verdana;font-size:150%;" >
 <center>
-  <h2>Let's change profile pictures to express our support, Just like the one below!</h2>
-  <p>
+  <p>Let's change profile pictures to express our support for  <a href="https://www.savetheinternet.in/" target="_blank">#SaveTheInternet</a>, Just like the one below!</p>
+  <p>&nbsp;</p>
     <%= image_tag 'default.jpg', alt: 'Create Facebook Profile Image', width: 300, class: 'img-responsive' %>
   </p>
   <p><%= link_to "Login with Facebook", auth_provider_url, class: 'btn btn-primary btn-login' %></p>
