--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,7 @@
 <div class="row">
+<%= favicon_link_tag %>
   <div class="col-md-8 col-sm-8 col-xs-8">
-    <h1 style="font-family:verdana;">
+    <h1 style="font-family:verdana;">Profile picture for 
  <a href="https://www.savetheinternet.in/" target="_blank">#SaveTheInternet</a>
     </h1>
   </div>
