Index page completly changed
Added freebasics image

changed opacity to zero (The image is already transperant)

footer edited

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -25,6 +25,13 @@ h1 {
   }
 }
 
+h2 {
+  
+    font-size: 16px;
+    font-weight: normal;
+    padding: 4px 0;
+}
+
 .pdbtm-sm {
   margin-bottom: 40px;
   a.btn {
