--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,8 @@
 <footer>
   <p class="col-md-12 col-sm-12 col-xs-12">
     Made with
-    <span class="glyphicon glyphicon-heart"></span> for
+    <span class="glyphicon glyphicon-heart"></span> by 
+    <a href="https://www.facebook.com/prasadpilla81" target="_blank">Prasad Pilla</a> for
     <a href="https://www.savetheinternet.in/" target="_blank">#SaveTheInternet</a>.
     <%= link_to 'Privacy Policy', privacy_path %>
   </p>
