--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,8 +1,6 @@
 <div class="row">
-<%= favicon_link_tag %>
   <div class="col-md-8 col-sm-8 col-xs-8">
-    <h1 style="font-family:verdana;">Profile picture for 
- <a href="https://www.savetheinternet.in/" target="_blank">#SaveTheInternet</a>
+    <h1 style="font-family:verdana;"><a href="https://www.savetheinternet.in/" target="_blank">#SaveTheInternet</a>
     </h1>
   </div>
   <div class="col-md-4 col-sm-4 col-xs-4">
