--- a/app/views/overlay/index.html.erb
+++ b/app/views/overlay/index.html.erb
@@ -1,8 +1,63 @@
 <div style="font-family:verdana;font-size:150%;" >
 <center>
+<p>TRAI has issued another consultation paper asking once again, if we want Net Neutrality. This time, it's about differential pricing - Airtel Zero and Free Basics/Internet.org type services.</p>
   <p>Let's change profile pictures to express our support for  <a href="https://www.savetheinternet.in/" target="_blank">#SaveTheInternet</a>, Just like the one below!</p>
   <p>&nbsp;</p>
     <%= image_tag 'default.jpg', alt: 'Create Facebook Profile Image', width: 300, class: 'img-responsive' %>
   </p>
   <p><%= link_to "Login with Facebook", auth_provider_url, class: 'btn btn-primary btn-login' %></p>
 </center></div>
+<div class="container">
+<hr>
+<div class="row">
+<div class="col-lg-4 col-md-4 col-sm-12">
+<div class="panel panel-default">
+<div class="panel-heading">
+<h3 class="panel-title">What happened so far ?</h3>
+</div>
+<div class="panel-body">
+<a href="http://indianexpress.com/article/technology/tech-news-technology/facebook-free-basics-ban-net-neutrality-all-you-need-to-know/" target="_blank">Read more...</a>
+</div>
+</div>
+</div>
+<div class="col-lg-4 col-md-4 col-sm-12">
+<div class="panel panel-default">
+<div class="panel-heading">
+<h3 class="panel-title">Facebook's Free Basics</h3>
+</div>
+<div class="panel-body">
+<a href="http://blog.savetheinternet.in/free-basics/" target="_blank">Our coverage of Free Basics</a>
+</div>
+</div>
+</div>
+<div class="col-lg-4 col-md-4 col-sm-12">
+<div class="panel panel-default">
+<div class="panel-heading">
+<h3 class="panel-title">#SaveTheInternet Blog</h3>
+</div>
+<div class="panel-body">
+<a href="http://blog.savetheinternet.in/" target="_blank">Updates from the SaveTheInternet team</a>
+</div>
+</div>
+</div>
+</div>
+</div>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<h2 style="font-family:verdana">Check out these videos about #SaveTheInternet <h2>
+<p>&nbsp;</p>
+<div class="container">
+<div class="row">
+<div class="col-lg-4 col-md-4 col-sm-12">
+<iframe width="300" height="200" src="https://www.youtube.com/embed/mfY1NKrzqi0" frameborder="0" allowfullscreen></iframe>
+</div>
+<div class="col-lg-4 col-md-4 col-sm-12">
+<iframe width="300" height="200" src="https://www.youtube.com/embed/W0w_YhZUYeA" frameborder="0" allowfullscreen></iframe>
+</div>
+<div class="col-lg-4 col-md-4 col-sm-12">
+<iframe width="300" height="200" src="https://www.youtube.com/embed/AAQWsTFF0BM" frameborder="0" allowfullscreen></iframe>
+</div>
+</div>
+</div>
+
+<p>&nbsp;</p>
